--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "codehike": "1.0.7",
     "date-fns": "4.1.0",
     "dinero.js": "2.0.0-alpha.10",
+    "lodash-es": "4.17.21",
     "ms": "3.0.0-canary.1",
     "next": "15.6.0-canary.10",
     "react": "19.1.1",
@@ -31,6 +32,7 @@
     "@tailwindcss/forms": "0.5.10",
     "@tailwindcss/postcss": "4.1.13",
     "@tailwindcss/typography": "0.5.16",
+    "@types/lodash-es": "4.17.12",
     "@types/ms": "2.1.0",
     "@types/node": "22.13.14",
     "@types/react": "19.1.13",
